test/TinySwift/reject/actor.swift
// RUN: %target-swift-frontend -typecheck -verify -enable-experimental-feature TinySwift -disable-objc-interop -parse-stdlib %s
// REQUIRES: swift_feature_TinySwift

actor MyActor {} // expected-error {{actors are not supported in TinySwift}}
